--- a/app/less/base/_base.less
+++ b/app/less/base/_base.less
@@ -48,7 +48,7 @@ input, textarea, button, select {
 .section-container {
   width: 100%;
   max-width: 1216px;
-
+  position: relative;
   margin: 0 auto;
   @media only screen and (max-width: 1350px) {
     width: 80%;
@@ -197,6 +197,11 @@ footer {
     line-height: 49px;
     letter-spacing: normal;
   }
+  @media only screen and (max-width: 320px) {
+    width: 98px;
+    height: 33px;
+    line-height: 33px;
+  }
 }
 
 .partners-form-button {
@@ -256,7 +261,7 @@ footer {
     .section-number-line{
       font-size: 30px;
       &:after{
-        width: 126px;
+        width: 85px;
         margin-left: 13px;
       }
     }
@@ -273,7 +278,39 @@ footer {
   right: 3.2291%;
   transform: translateY(-50%);
   width: 50px;
-  z-index: 100;
+  z-index: 8;
+  &.showin li{
+    animation: showin .3s ease-in-out;
+    animation-fill-mode: forwards;
+    &:nth-child(2){
+      animation-delay: .07s;
+    }
+    &:nth-child(3){
+      animation-delay: .14s;
+    }
+    &:nth-child(4){
+      animation-delay: .21s;
+    }
+    &:nth-child(5){
+      animation-delay: .28s;
+    }
+  }
+  &.not-showin li{
+    animation: notshowin .3s ease-in-out;
+    animation-fill-mode: forwards;
+    &:nth-child(4){
+      animation-delay: .07s;
+    }
+    &:nth-child(3){
+      animation-delay: .14s;
+    }
+    &:nth-child(2){
+      animation-delay: .21s;
+    }
+    &:nth-child(1){
+      animation-delay: .28s;
+    }
+  }
   li {
     display: block;
     width: 100%;
@@ -281,6 +318,13 @@ footer {
     margin-bottom: 49px;
     font-size: 0;
     line-height: 1;
+    opacity: 0;
+    transform: translateX(100%);
+    //animation: fadeInRight .5s ease-in-out;
+
+    &:last-child{
+      margin-bottom:0;
+    }
     &.active {
       .navigation-item {
         width: 100%;
@@ -631,6 +675,18 @@ footer {
     height: 85px;
     line-height: 85px;
     padding: 0 30px;
+    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      line-height: 85px;
+    }
+    &::-moz-placeholder { /* Firefox 19+ */
+      line-height: 85px;
+    }
+    &:-moz-placeholder { /* Firefox 18- */
+      line-height: 85px;
+    }
+    &:-ms-input-placeholder { /* IE 10+ */
+      line-height: 85px;
+    }
   }
   textarea {
     min-height: 206px;
@@ -650,6 +706,18 @@ footer {
     input {
       height: 73px;
       line-height: 73px;
+      &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        line-height: 73px;
+      }
+      &::-moz-placeholder { /* Firefox 19+ */
+        line-height: 73px;
+      }
+      &:-moz-placeholder { /* Firefox 18- */
+        line-height: 73px;
+      }
+      &:-ms-input-placeholder { /* IE 10+ */
+        line-height: 73px;
+      }
     }
 
     input, textarea {
@@ -674,6 +742,18 @@ footer {
       height: 52px;
       line-height: 52px;
       padding: 0 24px;
+      &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        line-height: 52px;
+      }
+      &::-moz-placeholder { /* Firefox 19+ */
+        line-height: 52px;
+      }
+      &:-moz-placeholder { /* Firefox 18- */
+        line-height: 52px;
+      }
+      &:-ms-input-placeholder { /* IE 10+ */
+        line-height: 52px;
+      }
     }
 
     textarea {
@@ -745,5 +825,27 @@ footer {
 .hidden-tablet {
   @media only screen and (max-width: 768px) {
     display: none;
+  }
+}
+
+
+@keyframes showin {
+  0%{
+    opacity:0;
+    transform: translateX(100%);
+  }
+  100%{
+    opacity:1;
+    transform: translateX(0%);
+  }
+}
+@keyframes notshowin {
+  0%{
+    transform: translateX(0%);
+    opacity:1;
+  }
+  100%{
+    transform: translateX(100%);
+    opacity:0;
   }
 }
