--- a/app/less/base/_base.less
+++ b/app/less/base/_base.less
@@ -763,6 +763,7 @@ footer {
 
     input, textarea {
       margin-bottom: 19px;
+      font-size: 12px;
       &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         font-size: 12px;
       }
