--- a/app/less/components/contact-form/_contact-form.less
+++ b/app/less/components/contact-form/_contact-form.less
@@ -155,6 +155,7 @@
       input {
         margin-bottom: 5px;
         padding-left: 25px;
+        font-size: 12px;
         &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
           font-size: 9px;
         }
